--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Expenses Calculator</string>
+    <string name="layout_type_incomes_title">הכנסות</string>
+    <string name="layout_type_expenses_title">הוצאות</string>
 </resources>
